bug browsing sections on smaller res gets too wide

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 /* @import url(./contact.scss); */
 
 
-html, body {
+body {
     margin: 0;
     padding: 0;
     box-sizing: content-box;
@@ -283,11 +283,11 @@ html, body {
 .sections-js {
     background-color: #ffffff;
     margin-left: 0%;
-    padding: 0 50px;
+    /* padding: 0 50px; */
     overflow-y: scroll;
     box-shadow: 0 0px 10px rgba(0, 0, 0, 0.08);
     background: #fff;
-    max-width: 995px;
+    /* max-width: 995px; */
     margin-top: 50px;
     overflow: hidden; 
 }
